--- a/springConverter/src/main/resources/public/page.html
+++ b/springConverter/src/main/resources/public/page.html
@@ -33,7 +33,7 @@
                 </div>
 
                 <div style="margin-bottom: 70px;">
-                    <form method="post" th:action="@{/upload}" enctype="multipart/form-data">
+                    <form method="post" th:action="@{/upload_source}" enctype="multipart/form-data">
                         <p class="field_inter-title">Исходная таблица</p>
                         <div class="form-group">
                             <input type="file" name="file" class="form-control-file">
@@ -42,7 +42,7 @@
                     </form>
                 </div>
                 <div style="margin-bottom: 70px;">
-                    <form method="post" th:action="@{/upload}" enctype="multipart/form-data">
+                    <form method="post" th:action="@{/upload_sample}" enctype="multipart/form-data">
                         <p class="field_inter-title">Шаблон</p>
                         <div class="form-group">
                             <input type="file" name="file" class="form-control-file">
