fixed convert button bugs

--- a/springConverter/src/main/resources/public/page.html
+++ b/springConverter/src/main/resources/public/page.html
@@ -49,7 +49,7 @@
                 </div>
             </li>
             <li>
-                <button class="bth-reset main_menu-bth"
+                <button class="bth-reset main_menu-bth" disabled id="conv"
                         onclick="convertOnClick(this.id)" style="margin-bottom: 0">Конвертировать</button>
             </li>
         </ul>
